Closed Bug 632155 Opened 13 years ago Closed 13 years ago

crash [@ gfxWindowsPlatform::GetDLLVersion(unsigned short const*, nsAString_internal&)]

Categories

(Core :: Graphics, defect)

x86
Windows NT
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jrmuizel, Assigned: jtd)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-3c709b34-a9aa-4386-88fe-6c2ab2110206 .
=============================================================
Component: General → Graphics
Product: Firefox → Core
QA Contact: general → thebes
Seems like this crash could maybe happen if GetFileVersionInfoSizeW returns 0. Although, it's not clear how we would get past VerQueryValue()
Assignee: nobody → jdaggett
(In reply to comment #1)
> Seems like this crash could maybe happen if GetFileVersionInfoSizeW returns 0.
> Although, it's not clear how we would get past VerQueryValue()

While your theory could certainly lead to a crash, I don't think this is what's happening here, since AppendElements(0) would return a pointer to invalid memory, which could lead us crash in either GetFileVersionInfoW or VerQueryValue.  len should be checked against zero after calling VerQueryValue though, since the version entry might exist but have zero size.
Attachment #510524 - Flags: review?(ehsan)
Comment on attachment 510524 [details] [diff] [review]
patch, check possible error conditions

Looks great.  I have one nit though: please end the lines with operators instead of beginning new ones with operators.  r=me with that addressed.
Attachment #510524 - Flags: review?(ehsan) → review+
Landed on trunk
http://hg.mozilla.org/mozilla-central/rev/89e6a9841931
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Crash Signature: [@ gfxWindowsPlatform::GetDLLVersion(unsigned short const*, nsAString_internal&)]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: