Bug 632155. Check possible error conditions in GetDLLVersion. r=ehsan, a=ehsan