gfx/thebes/gfxWindowsPlatform.cpp
@@ -703,18 +703,25 @@ gfxWindowsPlatform::GetDLLVersion(const PRUnichar *aDLLPath, nsAString& aVersion
     versInfoSize = GetFileVersionInfoSizeW(aDLLPath, NULL);
     nsAutoTArray<BYTE,512> versionInfo;
     
-    if (!versionInfo.AppendElements(PRUint32(versInfoSize))) {
+    if (versInfoSize == 0 ||
+        !versionInfo.AppendElements(PRUint32(versInfoSize)))
+    {
         return;
     }
+
     if (!GetFileVersionInfoW(aDLLPath, 0, versInfoSize, 
-           LPBYTE(versionInfo.Elements()))) {
+           LPBYTE(versionInfo.Elements())))
+    {
         return;
     } 
 
-    UINT len;
-    VS_FIXEDFILEINFO *fileInfo;
+    UINT len = 0;
+    VS_FIXEDFILEINFO *fileInfo = nsnull;
     if (!VerQueryValue(LPBYTE(versionInfo.Elements()), TEXT("\\"),
-           (LPVOID *)&fileInfo , &len)) {
+           (LPVOID *)&fileInfo, &len) ||
+        len == 0 ||
+        fileInfo == nsnull)
+    {
         return;
     }
 
